<resources>
    <string name="app_name">Youtube</string>
    <!--
    <string name="api_key2">AIzaSyDpSIcvAQNruVSQUOouHkSUCcBCIXIu9Cs</string>
-->
        <string name="api_key2">AIzaSyBvoZ0_bnRCNvtheb1Njmvkr0XX-Me3pYQ</string>
    <string name="add_videos">Add videos</string>
    <string name="next">Next</string>
    <string name="recently_watched">Recently Watched</string>
    <string name="_0_videos_selected">0 videos selected</string>
    <string name="search_watch_history">Search watch history</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="recent">Recent</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="your_videos">Your videos</string>
    <string name="your_movies">Your movies</string>
    <string name="watch_later">Watch later</string>
    <string name="playlists">Playlists</string>
    <string name="recently_added">Recently added</string>
    <string name="liked_videos">Liked videos</string>
    <string name="_0_videos">0 videos</string>
    <string name="search_youtube">Search YouTube</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="subscribe">subscribe</string>
    <string name="autoplay">Autoplay</string>
    <string name="up_next">Up next</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="new_playlist">New playlist</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="create">Create</string>
    <string name="home">Home</string>
    <string name="subscription">Subscription</string>
    <string name="library">Library</string>
    <string name="save_to_watch_later">Save to Watch Later</string>
    <string name="remove">Remove</string>
    <string name="dislike">Dislike</string>
</resources>