<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_playlist"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/title"
        android:maxLength="20"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="6dp"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/create_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingHorizontal="20dp"
            android:paddingVertical="6dp"
            android:text="@string/create"
            android:textColor="@color/blue"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>