<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.LibraryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:text="@string/recent"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="6dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="RtlSymmetry"
            tools:listitem="@layout/item_recent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.001dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/history_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="6dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:minLines="2"
                android:padding="4dp"
                android:text="@string/history"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_baseline_history_24" />

            <TextView
                android:id="@+id/downloads_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:minLines="2"
                android:padding="4dp"
                android:text="@string/downloads"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_baseline_file_download_24" />

            <TextView
                android:id="@+id/your_vodeos_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:minLines="2"
                android:padding="4dp"
                android:text="@string/your_videos"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_baseline_smart_display_24" />

            <TextView
                android:id="@+id/your_movies_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:minLines="2"
                android:padding="4dp"
                android:text="@string/your_movies"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_baseline_local_movies_24" />

            <TextView
                android:id="@+id/watch_later_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="6dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:minLines="2"
                android:padding="4dp"
                android:text="@string/watch_later"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_baseline_watch_later_24" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.001dp"
                android:background="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="6dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/playlists"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recently_added"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_keyboard_arrow_down_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_layout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_add_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="6dp"
                android:text="@string/new_playlist"
                android:textColor="@color/blue"
                android:textSize="18sp" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:id="@+id/liked_layout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_thumb_up_24"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingHorizontal="6dp"
                    android:text="@string/liked_videos"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/liked_video_count_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingHorizontal="6dp"
                    android:text="@string/_0_videos"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>