<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ShowVideoFragment">

    <FrameLayout
        android:id="@+id/youtube_fragment"
        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/white"
        tools:ignore="Instantiatable" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/any_layouts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <LinearLayout
                        android:id="@+id/drop_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:maxLines="3"
                            android:padding="4dp"
                            android:text="@string/app_name"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:drawableRightCompat="@drawable/ic_drop_down" />


                        <TextView
                            android:id="@+id/info_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/thumb_up_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:textSize="12sp"
                            app:drawableTopCompat="@drawable/ic_baseline_thumb_up_24" />

                        <TextView
                            android:id="@+id/thumb_down_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            android:text="@string/dislike"
                            android:focusable="true"
                            android:gravity="center"
                            android:textSize="12sp"
                            app:drawableTopCompat="@drawable/ic_baseline_thumb_down_24" />

                        <TextView
                            android:id="@+id/share_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:text="@string/share"
                            android:textSize="12sp"
                            app:drawableTopCompat="@drawable/ic_baseline_share_24" />

                        <TextView
                            android:id="@+id/download_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:text="@string/download"
                            android:textSize="12sp"
                            app:drawableTopCompat="@drawable/ic_baseline_download_for_offline_24" />

                        <TextView
                            android:id="@+id/save_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:text="@string/save"
                            android:textSize="12sp"
                            app:drawableTopCompat="@drawable/ic_baseline_add_to_photos_24" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.01dp"
                        android:background="@color/black"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/channel_card"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="18dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/user_iv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="#A1A62323"
                            tools:ignore="ContentDescription" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/channel_name_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:paddingHorizontal="10dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/subscribe_tv"
                        app:layout_constraintStart_toEndOf="@id/channel_card"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/subscribe_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:text="@string/subscribe"
                        android:textAllCaps="true"
                        android:textColor="@color/red"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.01dp"
                        android:background="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/drop_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/drop_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <View
                        android:id="@+id/drop"
                        android:layout_width="match_parent"
                        android:layout_height="0.01dp"
                        android:background="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/up_next" />

                    <Switch
                        android:id="@+id/autoplay_chb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/autoplay"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/edittext"
                    android:padding="10dp"
                    android:text="Remember to keep comments respectful and to follow our Community Guidlines"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/comments"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/comments_count_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:src="@drawable/ic_baseline_sort_24"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/progress_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/white">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.45" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/load_layout"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="center">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>